--- a/informations/news_page.frg.html
+++ b/informations/news_page.frg.html
@@ -4,7 +4,7 @@
 		</div>
 
 	<section class="fil_actu">
-
+		
 		<section class="actu">
 			<div class="title-acces"><h4>Catégorie de l'article :</h4></div>
 			<div class="header_actu">
@@ -17,19 +17,18 @@
 			</div>
 
 			<figure>
-				<img src="entrepot/thumbs_news/news_1.jpg" height="121" width="300" alt="thumbnail">
+				<img src="entrepot/thumbs_news/news_5.jpg" height="121" width="300" alt="thumbnail">
 			</figure>
 			<div class="clear"></div>
 			<section class="content_actu">
 				<div class="title_actu">
 					<h3>
-					Bryan Cranston et Aaron Paul 
-					de retour dans "Better Call Saul", 
-					le spin-off de "Breaking Bad" ?
+					Vous souvenez-vous de TOUTES 
+					les tenues portées par Walter White ?
 					</h3>
 				</div>
 				<span class="lire_suite">
-					<a href="index.php?page=news&amp;id=1">Lire la suite</a>
+					<a href="index.php?page=news&amp;id=5">Lire la suite</a>
 				</span>
 			</section>
 		</section>
@@ -64,6 +63,122 @@
 			</section>
 		</section>
 		<hr>
+
+		<section class="actu" style="margin-top:-9px;">
+			<div class="title-acces"><h4>Catégorie de l'article :</h4></div>
+			<div class="header_actu">
+				<div class="type_actu">
+					<i class="sprite sprite-icon_news2"></i>
+				</div>
+				<div class="libelle_type_actu">
+					<span>INTERVIEW</span>
+				</div>
+			</div>
+
+			<figure>
+				<img src="entrepot/thumbs_news/news_2.jpg" height="121" width="300" alt="thumbnail">
+			</figure>
+			<div class="clear"></div>
+			<section class="content_actu">
+				<div class="title_actu">
+					<h3>
+					La fin vue par Carlton Cuse, 
+					ex-showrunner de "Lost" !
+					</h3>
+				</div>
+				<span class="lire_suite">
+					<a href="index.php?page=news&amp;id=2">Lire la suite</a>
+				</span>
+			</section>
+		</section>
+		<hr>
+
+		<section class="actu">
+			<div class="title-acces"><h4>Catégorie de l'article :</h4></div>
+			<div class="header_actu">
+				<div class="type_actu">
+					<i class="sprite sprite-icon_news3"></i>
+				</div>
+				<div class="libelle_type_actu">
+					<span>COUP DE COEUR</span>
+				</div>
+			</div>
+
+			<figure>
+				<img src="entrepot/thumbs_news/news_3.jpg" height="121" width="300" alt="thumbnail">
+			</figure>
+			<div class="clear"></div>
+			<section class="content_actu">
+				<div class="title_actu">
+					<h3>
+					La lettre d'amiration du fan Anthony Hopkins 
+					à l'immense Bryan Cranston.
+					</h3>
+				</div>
+				<span class="lire_suite">
+					<a href="index.php?page=news&amp;id=3">Lire la suite</a>
+				</span>
+			</section>
+		</section>
+		<hr>
+
+		<section class="actu">
+			<div class="title-acces"><h4>Catégorie de l'article :</h4></div>
+			<div class="header_actu">
+				<div class="type_actu">
+					<i class="sprite sprite-icon_news1"></i>
+				</div>
+				<div class="libelle_type_actu">
+					<span>TOURNAGE</span>
+				</div>
+			</div>
+
+			<figure>
+				<img src="entrepot/thumbs_news/news_4.jpg" height="121" width="300" alt="thumbnail">
+			</figure>
+			<div class="clear"></div>
+			<section class="content_actu">
+				<div class="title_actu">
+					<h3>
+					Les 2 derniers épisodes de "Breaking Bad" 
+					en version longue
+					</h3>
+				</div>
+				<span class="lire_suite">
+					<a href="index.php?page=news&amp;id=4">Lire la suite</a>
+				</span>
+			</section>
+		</section>
+		<hr>
+
+		<section class="actu">
+			<div class="title-acces"><h4>Catégorie de l'article :</h4></div>
+			<div class="header_actu">
+				<div class="type_actu">
+					<i class="sprite sprite-icon_news1"></i>
+				</div>
+				<div class="libelle_type_actu">
+					<span>TOURNAGE</span>
+				</div>
+			</div>
+
+			<figure>
+				<img src="entrepot/thumbs_news/news_6.jpg" height="121" width="300" alt="thumbnail">
+			</figure>
+			<div class="clear"></div>
+			<section class="content_actu">
+				<div class="title_actu">
+					<h3>
+					"Battle Creek" : l'après-"Breaking Bad" 
+					de Vince Gilligan !
+					</h3>
+				</div>
+				<span class="lire_suite">
+					<a href="index.php?page=news&amp;id=6">Lire la suite</a>
+				</span>
+			</section>
+		</section>
+		
 	</section>
 
 	</div>
